# daphne

./: CMakeLists.txt  build.sh
doc/: GettingStarted.md
src/ir/daphneir/: DaphneInferTypesOpInterface.cpp
src/runtime/local/datastructures/: DenseMatrix.cpp  DenseMatrix.h  Structure.h  ValueTypeUtils.h
src/runtime/local/io/: BPF.h  File.h  ReadCsv.h  Storage.h
src/runtime/local/io/bpf/: .gitignore  CMakeLists.txt  ReadCsv.c  ReadCsvDM.c  ReadCsvDM.h
src/runtime/local/kernels/: EwBinaryMat.h  ExtractCol.h  Group.h  Order.h  Pooling.cpp  Syrk.h
src/runtime/local/kernels/CUDA/: Gemv.cpp
src/runtime/local/vectorized/: MTWrapper.h  MTWrapper_dense.cpp
test/: CMakeLists.txt
test/runtime/local/io/: ReadCsvTest.cpp
test/runtime/local/kernels/: CUDA_ContextTest.cpp
